--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "next": "15.1.4",
