--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
+    "jose": "^5.9.6",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
